--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.20.0",
     "bootstrap-vue": "^2.17.3",
     "es-module-lexer": "^0.3.25",
